# mini-cli

./: .gitignore  CMakeLists.txt  Lexer.cpp  main.cpp
CommandFactories/: CommandFactory.cpp  CommandFactory.h
Commands/: BatchCommand.cpp  BatchCommand.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  ICommand.cpp  ICommand.h  PromptCommand.cpp  PromptCommand.h  RMCommand.cpp  RMCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.cpp  TouchCommand.h  TruncateCommand.cpp  TruncateCommand.h  WCCommand.cpp  WCCommand.h
Commands/Base/: Command.cpp  Command.h
Commands/Factory/: CommandFactory.cpp  CommandFactory.h
Commands/InputOutputCommands/: EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  IInputOutputCommand.h  TRCommand.cpp  TRCommand.h  WCCommand.cpp  WCCommand.h
Commands/OutputCommands/: BatchCommand.cpp  BatchCommand.h  DateCommand.cpp  DateCommand.h  IOutputCommand.h  OutputCommand.h  TimeCommand.cpp  TimeCommand.h
Commands/Types/: DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.cpp  TouchCommand.h  WCCommand.cpp  WCCommand.h
Errors/: Error.h  Errors.h  LexicalError.cpp  LexicalError.h  OSError.h  SemanticError.h  SyntaxError.cpp  SyntaxError.h  UnknownCommandError.h
Executor/: Executor.cpp  Executor.h
Factories/: BatchFactory.cpp  BatchFactory.h  DateFactory.cpp  DateFactory.h  EchoFactory.cpp  EchoFactory.h  HeadFactory.cpp  HeadFactory.h  IFactory.cpp  IFactory.h  PromptFactory.cpp  PromptFactory.h  RMFactory.cpp  RMFactory.h  Registry.cpp  Registry.h  TRFactory.cpp  TRFactory.h  TimeFactory.cpp  TimeFactory.h  TouchFactory.cpp  TouchFactory.h  TruncateFactory.cpp  TruncateFactory.h  WCFactory.cpp  WCFactory.h
Parsing/: Argument.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
Program/: Executor.cpp  Executor.h  Program.cpp  Program.h
Tests/: CommandTests.cpp
commands/: Command.h  CommandFactory.cpp  CommandFactory.h  DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  TimeCommand.cpp
errors/: Errors.h
parser/: Argument.h  Parser.cpp  Parser.h
